--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gatsby-starter-landed-v2",
-  "description": "Gatsby Starter - Landed V2",
+  "name": "gatsby-personal-portfolio",
+  "description": "Phillip Sylvain - Personal Portfolio",
   "version": "1.0.0",
   "author": "Vasilis Gakis",
   "dependencies": {
@@ -19,7 +19,8 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-reveal": "^1.2.2",
-    "react-scroll": "^1.7.14"
+    "react-scroll": "^1.7.14",
+    "react-vertical-timeline-component": "^3.0.2"
   },
   "resolutions": {
     "react-helmet/react-side-effect": "2.1.0"
