--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "version": "1.0.0",
   "author": "Vasilis Gakis",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "gatsby": "^2.18.1",
-    "gatsby-image": "^2.2.33",
+    "gatsby-image": "^2.4.16",
     "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-manifest": "^2.2.29",
+    "gatsby-plugin-material-ui": "^2.1.10",
     "gatsby-plugin-offline": "^3.0.22",
-    "gatsby-plugin-react-helmet": "^3.1.15",
+    "gatsby-plugin-prettier-eslint": "^1.0.4",
+    "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sass": "^2.1.23",
     "gatsby-plugin-sharp": "^2.3.2",
     "gatsby-source-filesystem": "^2.1.38",
@@ -37,6 +40,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "eslint": "^7.6.0",
+    "eslint-plugin-react": "^7.20.6",
     "prettier": "^1.19.1"
   },
   "repository": {
